Проведен рефакторинг CSS-кода проекта

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&family=Roboto:wght@400;500;700;900&display=swap" 
     rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
     
 </head>
 <body>
@@ -201,26 +201,26 @@
                 <p lang="en">Product Designer</p>
                
                 <ul class="list socials">
-                    <li class="link cocial-item">
+                    <li class="link social-item">
                          <a class="team-social-link" href="http://instagram.com/" target="_blank">
                            <svg class="social-icon">
                               <use href="./images/sprite.svg#icon-instagram"></use>
                         </svg>
                     </a></li>
 
-                    <li class="link cocial-item">
+                    <li class="link social-item">
                         <a class="team-social-link" href="http://twitter.com/" target="_blank">
                        <svg class="social-icon">
                            <use href="./images/sprite.svg#icon-twitter"></use>
                        </svg>
                    </a></li>
-                   <li class="link cocial-item">
+                   <li class="link social-item">
                     <a class="team-social-link" href="http://facebook.com/" target="_blank">
                    <svg class="social-icon">
                        <use href="./images/sprite.svg#icon-facebook"></use>
                    </svg>
                </a></li>
-               <li class="link cocial-item">
+               <li class="link social-item">
                 <a class="team-social-link" href="http://linkedin.com/" target="_blank">
                <svg class="social-icon">
                    <use href="./images/sprite.svg#icon-linkedin"></use>
@@ -233,25 +233,25 @@
                 <h3 class="person-team">Ольга Репина</h3>
                 <p lang="en">Frontend Developer</p>
                 <ul class="list socials">
-                    <li class="link cocial-item">
+                    <li class="link social-item">
                          <a class="team-social-link" href="http://instagram.com/" target="_blank">
                         <svg class="social-icon">
                             <use href="./images/sprite.svg#icon-instagram"></use>
                         </svg>
                     </a></li>
-                    <li class="link cocial-item">
+                    <li class="link social-item">
                         <a class="team-social-link" href="http://twitter.com/" target="_blank">
                        <svg class="social-icon">
                            <use href="./images/sprite.svg#icon-twitter"></use>
                        </svg>
                    </a></li>
-                   <li class="link cocial-item">
+                   <li class="link social-item">
                     <a class="team-social-link" href="http://facebook.com/" target="_blank">
                    <svg class="social-icon">
                        <use href="./images/sprite.svg#icon-facebook"></use>
                    </svg>
                </a></li>
-               <li class="link cocial-item">
+               <li class="link social-item">
                 <a class="team-social-link" href="http://linkedin.com/" target="_blank">
                <svg class="social-icon">
                    <use href="./images/sprite.svg#icon-linkedin"></use>
@@ -264,25 +264,25 @@
                 <h3 class="person-team">Николай Тарасов</h3>
                 <p>Marketing</p>
                 <ul class="list socials">
-                    <li class="link cocial-item">
+                    <li class="link social-item">
                          <a class="team-social-link" href="http://instagram.com/" target="_blank">
                         <svg class="social-icon">
                             <use href="./images/sprite.svg#icon-instagram"></use>
                         </svg>
                     </a></li>
-                    <li class="link cocial-item">
+                    <li class="link social-item">
                         <a class="team-social-link" href="http://twitter.com/" target="_blank">
                        <svg class="social-icon">
                            <use href="./images/sprite.svg#icon-twitter"></use>
                        </svg>
                    </a></li>
-                   <li class="link cocial-item">
+                   <li class="link social-item">
                     <a class="team-social-link" href="http://facebook.com/" target="_blank">
                    <svg class="social-icon">
                        <use href="./images/sprite.svg#icon-facebook"></use>
                    </svg>
                </a></li>
-               <li class="link cocial-item">
+               <li class="link social-item">
                 <a class="team-social-link" href="http://linkedin.com/" target="_blank">
                <svg class="social-icon">
                    <use href="./images/sprite.svg#icon-linkedin"></use>
@@ -295,25 +295,25 @@
                 <h3 class="person-team">Михаил Ермаков</h3>
                 <p lang="en">UI Designer</p>
                 <ul class="socials list">
-                    <li class="link cocial-item">
+                    <li class="link social-item">
                          <a class="team-social-link" href="http://instagram.com/" target="_blank">
                         <svg class="social-icon">
                             <use href="./images/sprite.svg#icon-instagram"></use>
                         </svg>
                     </a></li>
-                    <li class="link cocial-item">
+                    <li class="link social-item">
                         <a class="team-social-link" href="http://twitter.com/" target="_blank">
                        <svg class="social-icon">
                            <use href="./images/sprite.svg#icon-twitter"></use>
                        </svg>
                    </a></li>
-                   <li class="link cocial-item">
+                   <li class="link social-item">
                     <a class="team-social-link" href="http://facebook.com/" target="_blank">
                    <svg class="social-icon">
                        <use href="./images/sprite.svg#icon-facebook"></use>
                    </svg>
                </a></li>
-               <li class="link cocial-item">
+               <li class="link social-item">
                 <a class="team-social-link" href="http://linkedin.com/" target="_blank">
                <svg class="social-icon">
                    <use href="./images/sprite.svg#icon-linkedin"></use>
